Fixed Menu spacing on mobile

--- a/src/css/Homepage.css
+++ b/src/css/Homepage.css
@@ -36,7 +36,7 @@
 }
 
 .navbarToggler {
-	margin-right: 1rem;
+	margin-right: 2rem;
 	color: var(--my-yellow);
 }
 
